# coffee-consuming-folkers-bot

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
bot_folker/: bot.py  chatgpt.py  settings.py
tests/: test_settings.py
